test/fixtures/network-policy-default-deny/passing.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-app
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: my-app
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
